--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tamata-Chan</title>
-    <link rel="shortcut icon" href="img/tamata.png">
+    <link rel="shortcut icon" href="tamata.png">
     <link rel="stylesheet" href="main.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
