--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tamata-Chan</title>
-    <link rel="shortcut icon" href="tamata.png">
+    <link rel="shortcut icon" href="img/tamata.png">
     <link rel="stylesheet" href="main.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -72,14 +72,40 @@
                 <div class="col">
                     <div class="code">
                         <p>Tamata-Chan is a Tinder-esque Discord bot. Its a simple bot where you can register your
-                            account by providing a small bio and age. After that you can start swiping and match with other registered
+                            account by providing a small bio and age. After that you can start swiping and match with
+                            other registered
                             users.</p>
                         <p>You can invite the bot using the link <a style="color:#c74b47"
-                                href="https://discord.com/">here</a>.</p>
+                                href="https://discord.com/"><b>here</b></a>.</p>
                         <p><b>Note:</b> We are not responsible for the conversations created after matching or for any
                             unverified false information people submit. Use at your own risk.</p>
                         <p><b>If you enjoy the bot and want to support the devs you can donate. You will be listed as a
                                 Donator on the website as well as on Discord.</b></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="info" class="mb-7">
+        <div class="container">
+
+            <div class="row">
+                <div class="col">
+                    <h2>Commands</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="code">
+                        <p><b>The default prefix for the bot is <a style="color:#c74b47">-</b></a></p>
+                        <p><a style="color:#c74b47"><b>help</b></a> shows all the available commands.</p>
+                        <p><a style="color:#c74b47"><b>register</b></a> registers your account for matching. Provide age and bio.</p>
+                        <p><a style="color:#c74b47"><b>update</b></a> update your age or bio.</p>
+                        <p><a style="color:#c74b47"><b>delete</b></a> deletes your profile so it will no longer show for swiping.</p>
+                        
                     </div>
                 </div>
             </div>
@@ -131,8 +157,8 @@
 
 
 
-    <footer class="container">If you have any suggestions or feedback please let us know. You can contact us through over Discord support server.<br>Have fun
-        with your swiping :^)</footer>
+    <footer class="container">If you have any suggestions or feedback please let us know. You can contact us through
+        over Discord support server.<br>Happy swiping :^)</footer>
 </body>
 
 </html>
