--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
                     <div class="code">
                         <p><b>The default prefix for the bot is <a style="color:#c74b47">-</b></a></p>
                         <p><a style="color:#c74b47"><b>help</b></a> shows all the available commands.</p>
-                        <p><a style="color:#c74b47"><b>register</b></a> registers your account for matching. Provide age and bio.</p>
+                        <p><a style="color:#c74b47"><b>register</b></a> registers your account for matching. Provide age
+                            and bio.</p>
                         <p><a style="color:#c74b47"><b>update</b></a> update your age or bio.</p>
-                        <p><a style="color:#c74b47"><b>delete</b></a> deletes your profile so it will no longer show for swiping.</p>
-                        
+                        <p><a style="color:#c74b47"><b>delete</b></a> deletes your profile so it will no longer show for
+                            swiping.</p>
+
                     </div>
                 </div>
             </div>
@@ -158,7 +160,8 @@
 
 
     <footer class="container">If you have any suggestions or feedback please let us know. You can contact us through
-        over Discord support server.<br>Happy swiping :^)</footer>
+        <a style="color:#c74b47" href="https://discord.com/"><b><u>Tamata-Chan Discord Server</u></a></b><br>Happy
+        swiping :^)</footer>
 </body>
 
 </html>
